# world-cup-forecasting-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: README.md  group_stage_fixtures_sample.csv  historical_results_sample.csv  market_odds_sample.csv  market_snapshots_sample.csv  (+4 more)
docs/: betting_evaluation_framework.md  daily_forecast_runbook.md  data_source_registry.md  model_selection.md  real_forecasting_agent_roadmap.md
reports/: assumptions.md  group_stage_simulation_report.md  logistic_backtest_report.md  match_prediction_report.md  model_card.md  prediction_ledger_report.md
scripts/: run_demo.sh
tests/: test_api.py  test_artifact_index.py  test_availability_adjustment.py  test_batch_market.py  test_calibration_and_clv.py  test_classifier.py  test_cli_import.py  test_elo.py  test_ensemble.py  test_feature_ablation.py  test_features.py  test_fixture_forecast.py  test_forecast_audit.py  test_group_stage_report.py  test_group_stage_simulation.py  test_ingest_fixtures.py  test_ingest_results.py  test_international_results_source.py  test_ledger_report.py  test_logistic_tuning.py  test_market.py  test_market_movement.py  test_match_report.py  test_player_availability.py  test_poisson.py  test_prediction_ledger.py  test_prediction_report.py  test_rolling_backtest.py  test_scheduled_runs.py  test_staking.py  test_static_dashboard.py  test_storage_backbone.py  test_strategy_policy.py  test_time_aware_upcoming_filter.py  test_upcoming_fixture_forecast.py  test_upcoming_forecast_report.py
(+40 files in other folders)
